revision con sonar